$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-04-07 [D] Added credits for Dutch language contributions {GauGau}
2010-04-07 [D] Added partial Dutch translation of documentation (user contribution) {GauGau}
2010-04-07 [M] Added code so that debug messages of swfupload flash uploader is shown in debug output {Abbas}
2010-04-01 [C] Added number of views to file details if detailed hit statistics are enabled (thread ID 63440) {eenemeenemuu}
2010-04-01 [C] Added class 'buttonlist' to all core themes {eenemeenemuu}
2010-03-31 [A] Added trailing slash check for ImageMagick path (thread ID 64333) {Nibbler}
2010-03-31 [B] Added check if plugin is installed (thread ID 64325) {eenemeenemuu}
2010-03-30 [B] Fixed issue when clicking keyword in file information (thread ID 64209) {eenemeenemuu}
2010-03-30 [C] Changed delimiter in page title (thread ID 64283) {eenemeenemuu}
2010-03-30 [B] Fixed referer issue when switching between login.php and contact.php (thread ID 64288) {eenemeenemuu}
2010-03-30 [O] Removed hard coded user_id on install.php (thread ID 64292) {eenemeenemuu}
2010-03-30 [O] Updated German language files {eenemeenemuu}
2010-03-29 [B] Removed referer from contact link if we are already on the contact page (thread ID 64288) {eenemeenemuu}
2010-03-28 [A] Added user-contributed partially-translated Spanish language file {GauGau}
2010-03-27 [D] Various minor documentation improvements {GauGau}
2010-03-26 [A] Added plugin hook main_page_layout {GauGau}
2010-03-26 [B] Fixed wrong linked files counter for subcategories {eenemeenemuu}